# REINDEER2

./: .gitignore  Cargo.toml  README.md
benchmarks/: 1000_genes_to_query.fa  accessions_CCLE.txt  accessions_qualitative_tests.txt  launch_metagraph.py  launch_needle.py  launch_reindeer.py  reindeer2_vs_kallisto.R  reindeer2_vs_reindeer.py
src/: main.rs  paca.rs  parser.rs  reindeer2.rs
test_files/: file1Q.fa  file2Q.fa  fof.txt
