[package]
name = "PACA"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bitstream-io = "0.9"
minimizer-iter = { git = "https://github.com/rust-seq/minimizer-iter.git" }
bit-vec = "0.6"
bio = "0.42.0"
rand = "0.8" 
clap = { version = "4.1", features = ["derive"] }
zstd = "0.11"
roaring = "0.10.9"
nthash = "0.5.1"
num-format = "0.4"
csv = "1.1"
rayon = "1.7"
flate2 = "1.0"


[profile.dev]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
overflow-checks = false


[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
overflow-checks = false
